# Indie-Studio

./: .gitignore  CMakeLists.txt  Makefile  OOP_indie_studio_2018.cbp  README.md
animate/: Makefile  anim.cpp  anim.hpp
assets/map/: map.txt
cmake/: FindIrrlicht.cmake
cross_platform/: CMakeCache.txt  CMakeLists.txt  Makefile  OOP_indie_studio_2018  cmake_install.cmake
cross_platform/src/: main.cpp
include/: Animation.hpp  Core.hpp  Game.hpp  GameStat.hpp  Graphic.hpp  Menu.hpp  MyEventReceiver.hpp  Option.hpp  Pause.hpp  Player.hpp  Select.hpp
include/Irrlicht/: IAttributeExchangingObject.h  ICursorControl.h  IDynamicMeshBuffer.h  IGUIElement.h  IMaterialRenderer.h  IMeshManipulator.h  ISceneNode.h  ISceneNodeAnimator.h  IShaderConstantSetCallBack.h  SAnimatedMesh.h  SSharedMeshBuffer.h  SSkinMeshBuffer.h  matrix4.h
lib/lua/readline/: Makefile  config.status
lib/lua/readline/doc/: Makefile
lib/lua/readline/examples/: Makefile
lib/lua/readline/shlib/: Makefile
ressources/: boutons.psd
src/: Animation.cpp  Core.cpp  Event.cpp  Game.cpp  Graphic.cpp  Menu.cpp  MyEventReceiver.cpp  Option.cpp  Pause.cpp  Player.cpp  Select.cpp  main.cpp
src/map/: a.out  map.txt  map_generate.cpp  read_map.cpp
x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OOP_indie_studio_2018.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bomberman.vcxproj  bomberman.vcxproj.filters
x64/Release/assets/map/: map.txt
x64/assets/map/: map.txt
x64/bomberman.dir/Release/bomberman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
