cmake_minimum_required(VERSION 3.13)
project(OOP_indie_studio_2018)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/Irrlicht)
include_directories(lib/lua)
include_directories(lib/lua/readline)
include_directories(lib/lua/readline/examples)
include_directories(lib/lua/readline/examples/rlfe)

add_executable(OOP_indie_studio_2018
        cross_platform/src/main.cpp
        include/Irrlicht/aabbox3d.h
        include/Irrlicht/CDynamicMeshBuffer.h
        include/Irrlicht/CIndexBuffer.h
        include/Irrlicht/CMeshBuffer.h
        include/Irrlicht/coreutil.h
        include/Irrlicht/CVertexBuffer.h
        include/Irrlicht/dimension2d.h
        include/Irrlicht/driverChoice.h
        include/Irrlicht/EAttributes.h
        include/Irrlicht/ECullingTypes.h
        include/Irrlicht/EDebugSceneTypes.h
        include/Irrlicht/EDeviceTypes.h
        include/Irrlicht/EDriverFeatures.h
        include/Irrlicht/EDriverTypes.h
        include/Irrlicht/EGUIAlignment.h
        include/Irrlicht/EGUIElementTypes.h
        include/Irrlicht/EHardwareBufferFlags.h
        include/Irrlicht/EMaterialFlags.h
        include/Irrlicht/EMaterialTypes.h
        include/Irrlicht/EMeshWriterEnums.h
        include/Irrlicht/EMessageBoxFlags.h
        include/Irrlicht/EPrimitiveTypes.h
        include/Irrlicht/ESceneNodeAnimatorTypes.h
        include/Irrlicht/ESceneNodeTypes.h
        include/Irrlicht/EShaderTypes.h
        include/Irrlicht/ETerrainElements.h
        include/Irrlicht/fast_atof.h
        include/Irrlicht/heapsort.h
        include/Irrlicht/IAnimatedMesh.h
        include/Irrlicht/IAnimatedMeshMD2.h
        include/Irrlicht/IAnimatedMeshMD3.h
        include/Irrlicht/IAnimatedMeshSceneNode.h
        include/Irrlicht/IAttributeExchangingObject.h
        include/Irrlicht/IAttributes.h
        include/Irrlicht/IBillboardSceneNode.h
        include/Irrlicht/IBillboardTextSceneNode.h
        include/Irrlicht/IBoneSceneNode.h
        include/Irrlicht/ICameraSceneNode.h
        include/Irrlicht/IColladaMeshWriter.h
        include/Irrlicht/ICursorControl.h
        include/Irrlicht/IDummyTransformationSceneNode.h
        include/Irrlicht/IDynamicMeshBuffer.h
        include/Irrlicht/IEventReceiver.h
        include/Irrlicht/IFileArchive.h
        include/Irrlicht/IFileList.h
        include/Irrlicht/IFileSystem.h
        include/Irrlicht/IGeometryCreator.h
        include/Irrlicht/IGPUProgrammingServices.h
        include/Irrlicht/IGUIButton.h
        include/Irrlicht/IGUICheckBox.h
        include/Irrlicht/IGUIColorSelectDialog.h
        include/Irrlicht/IGUIComboBox.h
        include/Irrlicht/IGUIContextMenu.h
        include/Irrlicht/IGUIEditBox.h
        include/Irrlicht/IGUIElement.h
        include/Irrlicht/IGUIElementFactory.h
        include/Irrlicht/IGUIEnvironment.h
        include/Irrlicht/IGUIFileOpenDialog.h
        include/Irrlicht/IGUIFont.h
        include/Irrlicht/IGUIFontBitmap.h
        include/Irrlicht/IGUIImage.h
        include/Irrlicht/IGUIImageList.h
        include/Irrlicht/IGUIInOutFader.h
        include/Irrlicht/IGUIListBox.h
        include/Irrlicht/IGUIMeshViewer.h
        include/Irrlicht/IGUIScrollBar.h
        include/Irrlicht/IGUISkin.h
        include/Irrlicht/IGUISpinBox.h
        include/Irrlicht/IGUISpriteBank.h
        include/Irrlicht/IGUIStaticText.h
        include/Irrlicht/IGUITabControl.h
        include/Irrlicht/IGUITable.h
        include/Irrlicht/IGUIToolbar.h
        include/Irrlicht/IGUITreeView.h
        include/Irrlicht/IGUIWindow.h
        include/Irrlicht/IImage.h
        include/Irrlicht/IImageLoader.h
        include/Irrlicht/IImageWriter.h
        include/Irrlicht/IIndexBuffer.h
        include/Irrlicht/ILightManager.h
        include/Irrlicht/ILightSceneNode.h
        include/Irrlicht/ILogger.h
        include/Irrlicht/IMaterialRenderer.h
        include/Irrlicht/IMaterialRendererServices.h
        include/Irrlicht/IMesh.h
        include/Irrlicht/IMeshBuffer.h
        include/Irrlicht/IMeshCache.h
        include/Irrlicht/IMeshLoader.h
        include/Irrlicht/IMeshManipulator.h
        include/Irrlicht/IMeshSceneNode.h
        include/Irrlicht/IMeshWriter.h
        include/Irrlicht/IMetaTriangleSelector.h
        include/Irrlicht/IOSOperator.h
        include/Irrlicht/IParticleAffector.h
        include/Irrlicht/IParticleAnimatedMeshSceneNodeEmitter.h
        include/Irrlicht/IParticleAttractionAffector.h
        include/Irrlicht/IParticleBoxEmitter.h
        include/Irrlicht/IParticleCylinderEmitter.h
        include/Irrlicht/IParticleEmitter.h
        include/Irrlicht/IParticleFadeOutAffector.h
        include/Irrlicht/IParticleGravityAffector.h
        include/Irrlicht/IParticleMeshEmitter.h
        include/Irrlicht/IParticleRingEmitter.h
        include/Irrlicht/IParticleRotationAffector.h
        include/Irrlicht/IParticleSphereEmitter.h
        include/Irrlicht/IParticleSystemSceneNode.h
        include/Irrlicht/IQ3LevelMesh.h
        include/Irrlicht/IQ3Shader.h
        include/Irrlicht/IRandomizer.h
        include/Irrlicht/IReadFile.h
        include/Irrlicht/IReferenceCounted.h
        include/Irrlicht/irrAllocator.h
        include/Irrlicht/irrArray.h
        include/Irrlicht/IrrCompileConfig.h
        include/Irrlicht/irrlicht.h
        include/Irrlicht/IrrlichtDevice.h
        include/Irrlicht/irrList.h
        include/Irrlicht/irrMap.h
        include/Irrlicht/irrMath.h
        include/Irrlicht/irrpack.h
        include/Irrlicht/irrString.h
        include/Irrlicht/irrTypes.h
        include/Irrlicht/irrunpack.h
        include/Irrlicht/irrXML.h
        include/Irrlicht/ISceneCollisionManager.h
        include/Irrlicht/ISceneLoader.h
        include/Irrlicht/ISceneManager.h
        include/Irrlicht/ISceneNode.h
        include/Irrlicht/ISceneNodeAnimator.h
        include/Irrlicht/ISceneNodeAnimatorCameraFPS.h
        include/Irrlicht/ISceneNodeAnimatorCameraMaya.h
        include/Irrlicht/ISceneNodeAnimatorCollisionResponse.h
        include/Irrlicht/ISceneNodeAnimatorFactory.h
        include/Irrlicht/ISceneNodeFactory.h
        include/Irrlicht/ISceneUserDataSerializer.h
        include/Irrlicht/IShaderConstantSetCallBack.h
        include/Irrlicht/IShadowVolumeSceneNode.h
        include/Irrlicht/ISkinnedMesh.h
        include/Irrlicht/ITerrainSceneNode.h
        include/Irrlicht/ITextSceneNode.h
        include/Irrlicht/ITexture.h
        include/Irrlicht/ITimer.h
        include/Irrlicht/ITriangleSelector.h
        include/Irrlicht/IVertexBuffer.h
        include/Irrlicht/IVideoDriver.h
        include/Irrlicht/IVideoModeList.h
        include/Irrlicht/IVolumeLightSceneNode.h
        include/Irrlicht/IWriteFile.h
        include/Irrlicht/IXMLReader.h
        include/Irrlicht/IXMLWriter.h
        include/Irrlicht/Keycodes.h
        include/Irrlicht/line2d.h
        include/Irrlicht/line3d.h
        include/Irrlicht/matrix4.h
        include/Irrlicht/path.h
        include/Irrlicht/plane3d.h
        include/Irrlicht/position2d.h
        include/Irrlicht/quaternion.h
        include/Irrlicht/rect.h
        include/Irrlicht/S3DVertex.h
        include/Irrlicht/SAnimatedMesh.h
        include/Irrlicht/SceneParameters.h
        include/Irrlicht/SColor.h
        include/Irrlicht/SExposedVideoData.h
        include/Irrlicht/SIrrCreationParameters.h
        include/Irrlicht/SKeyMap.h
        include/Irrlicht/SLight.h
        include/Irrlicht/SMaterial.h
        include/Irrlicht/SMaterialLayer.h
        include/Irrlicht/SMesh.h
        include/Irrlicht/SMeshBuffer.h
        include/Irrlicht/SMeshBufferLightMap.h
        include/Irrlicht/SMeshBufferTangents.h
        include/Irrlicht/SParticle.h
        include/Irrlicht/SSharedMeshBuffer.h
        include/Irrlicht/SSkinMeshBuffer.h
        include/Irrlicht/SVertexIndex.h
        include/Irrlicht/SVertexManipulator.h
        include/Irrlicht/SViewFrustum.h
        include/Irrlicht/triangle3d.h
        include/Irrlicht/vector2d.h
        include/Irrlicht/vector3d.h
        include/Core.hpp
        include/Menu.hpp
        include/GameStat.hpp
        include/Game.hpp
        include/MyEventReceiver.hpp
        include/Pause.hpp
        include/Player.hpp
        lib/lua/readline/examples/rlfe/extern.h
        lib/lua/readline/examples/rlfe/os.h
        lib/lua/readline/examples/rlfe/pty.c
        lib/lua/readline/examples/rlfe/rlfe.c
        lib/lua/readline/examples/rlfe/screen.h
        lib/lua/readline/examples/excallback.c
        lib/lua/readline/examples/fileman.c
        lib/lua/readline/examples/hist_erasedups.c
        lib/lua/readline/examples/hist_purgecmd.c
        lib/lua/readline/examples/histexamp.c
        lib/lua/readline/examples/manexamp.c
        lib/lua/readline/examples/readlinebuf.h
        lib/lua/readline/examples/rl-callbacktest.c
        lib/lua/readline/examples/rl-fgets.c
        lib/lua/readline/examples/rl.c
        lib/lua/readline/examples/rlcat.c
        lib/lua/readline/examples/rlevent.c
        lib/lua/readline/examples/rlptytest.c
        lib/lua/readline/examples/rltest.c
        lib/lua/readline/examples/rlversion.c
        lib/lua/readline/support/wcwidth.c
        lib/lua/readline/ansi_stdlib.h
        lib/lua/readline/bind.c
        lib/lua/readline/callback.c
        lib/lua/readline/chardefs.h
        lib/lua/readline/colors.c
        lib/lua/readline/colors.h
        lib/lua/readline/compat.c
        lib/lua/readline/complete.c
        lib/lua/readline/config.h
        lib/lua/readline/display.c
        lib/lua/readline/emacs_keymap.c
        lib/lua/readline/funmap.c
        lib/lua/readline/histexpand.c
        lib/lua/readline/histfile.c
        lib/lua/readline/histlib.h
        lib/lua/readline/history.c
        lib/lua/readline/history.h
        lib/lua/readline/histsearch.c
        lib/lua/readline/input.c
        lib/lua/readline/isearch.c
        lib/lua/readline/keymaps.c
        lib/lua/readline/keymaps.h
        lib/lua/readline/kill.c
        lib/lua/readline/macro.c
        lib/lua/readline/mbutil.c
        lib/lua/readline/misc.c
        lib/lua/readline/nls.c
        lib/lua/readline/parens.c
        lib/lua/readline/parse-colors.c
        lib/lua/readline/parse-colors.h
        lib/lua/readline/posixdir.h
        lib/lua/readline/posixjmp.h
        lib/lua/readline/posixselect.h
        lib/lua/readline/posixstat.h
        lib/lua/readline/readline.c
        lib/lua/readline/readline.h
        lib/lua/readline/rlconf.h
        lib/lua/readline/rldefs.h
        lib/lua/readline/rlmbutil.h
        lib/lua/readline/rlprivate.h
        lib/lua/readline/rlshell.h
        lib/lua/readline/rlstdc.h
        lib/lua/readline/rltty.c
        lib/lua/readline/rltty.h
        lib/lua/readline/rltypedefs.h
        lib/lua/readline/rlwinsize.h
        lib/lua/readline/savestring.c
        lib/lua/readline/search.c
        lib/lua/readline/shell.c
        lib/lua/readline/signals.c
        lib/lua/readline/tcap.h
        lib/lua/readline/terminal.c
        lib/lua/readline/text.c
        lib/lua/readline/tilde.c
        lib/lua/readline/tilde.h
        lib/lua/readline/undo.c
        lib/lua/readline/util.c
        lib/lua/readline/vi_keymap.c
        lib/lua/readline/vi_mode.c
        lib/lua/readline/xfree.c
        lib/lua/readline/xmalloc.c
        lib/lua/readline/xmalloc.h
        lib/lua/lapi.c
        lib/lua/lapi.h
        lib/lua/lauxlib.c
        lib/lua/lauxlib.h
        lib/lua/lbaselib.c
        lib/lua/lbitlib.c
        lib/lua/lcode.c
        lib/lua/lcode.h
        lib/lua/lcorolib.c
        lib/lua/lctype.c
        lib/lua/lctype.h
        lib/lua/ldblib.c
        lib/lua/ldebug.c
        lib/lua/ldebug.h
        lib/lua/ldo.c
        lib/lua/ldo.h
        lib/lua/ldump.c
        lib/lua/lfunc.c
        lib/lua/lfunc.h
        lib/lua/lgc.c
        lib/lua/lgc.h
        lib/lua/linit.c
        lib/lua/liolib.c
        lib/lua/llex.c
        lib/lua/llex.h
        lib/lua/llimits.h
        lib/lua/lmathlib.c
        lib/lua/lmem.c
        lib/lua/lmem.h
        lib/lua/loadlib.c
        lib/lua/lobject.c
        lib/lua/lobject.h
        lib/lua/lopcodes.c
        lib/lua/lopcodes.h
        lib/lua/loslib.c
        lib/lua/lparser.c
        lib/lua/lparser.h
        lib/lua/lprefix.h
        lib/lua/lstate.c
        lib/lua/lstate.h
        lib/lua/lstring.c
        lib/lua/lstring.h
        lib/lua/lstrlib.c
        lib/lua/ltable.c
        lib/lua/ltable.h
        lib/lua/ltablib.c
        lib/lua/ltm.c
        lib/lua/ltm.h
        lib/lua/lua.c
        lib/lua/lua.h
        lib/lua/lua.hpp
        lib/lua/luac.c
        lib/lua/luaconf.h
        lib/lua/lualib.h
        lib/lua/lundump.c
        lib/lua/lundump.h
        lib/lua/lutf8lib.c
        lib/lua/lvm.c
        lib/lua/lvm.h
        lib/lua/lzio.c
        lib/lua/lzio.h
        src/Core.cpp
        src/main.cpp
        src/Menu.cpp
        src/Game.cpp
        src/MyEventReceiver.cpp
        src/Player.cpp
        src/Select.cpp
        src/Pause.cpp)
